# subatomic-trading-bot

./: .env.example  .gitignore  README.md  START_HERE.md  notebook_cell_fix.py  pyproject.toml  run_api.py  test_device_fix.py
config/: config.yaml
data/demo/: combined_demo_data.csv  house1_aligned_30min.csv  house2_aligned_30min.csv  multi_household_training_data.csv  multi_household_training_data.npz  pricing_aligned_30min.csv
docs/: ARCHITECTURE.md  BUSINESS_RULES.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PHASE_1_PRICING_ONLY.md  IMPLEMENTATION_PLAN_DUAL_TRANSFORMERS.md  MODULE_REFERENCE.md  QUICK_START_PHASE_1A.md  TECHNICAL_REFERENCE.md  TRANSFORMER_IMPLEMENTATION_PLAN.md  TRANSFORMER_PRE_FLIGHT_PLAN.md  TRANSFORMER_QUICK_REFERENCE.md
docs/archive/: IMPLEMENTATION_PLAN_DUAL_TRANSFORMERS.md
notebooks/: DEBUG_TRADING_LABELS.py  README.md  train_dual_transformers.ipynb
scripts/: align_house_data_for_demo.py  diagnose_trading_logic.py  evaluate_models_notebook_style.py  evaluate_trading_models.py  regenerate_battery_data.py  train_trading_transformer_from_supabase.py  train_trading_transformer_local.py  visualize_supabase_data.py
sql/: create_battery_tables.sql
src/api/: backtest_demo.py  inference.py  main.py  models.py  routes.py  utils.py
src/data_integration/: clear_battery_data.py  consumption_parser.py  data_adapter.py  data_adapter_old.py  diagnose_rls.py  generate_battery_data_for_supabase.py  generate_battery_trading_data.py  list_tables.py  seed_supabase_data.py  supabase_connector.py  (+4 more)
tests/: test_imports.py  test_model_validation.py
(+30 files in other folders)
